--- a/Login.html
+++ b/Login.html
@@ -35,7 +35,7 @@
         <a class="navbar-brand" href="#">Chatroom</a> 
             <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-                <a class="nav-link navee" href="parking-page.shtml" style="outline:none;">Home</a>
+                <a class="nav-link navee" href="home.html" style="outline:none;">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link navee" href="Login.html" style="outline:none;">Login</a>
