Seperated js_files

--- a/Login.html
+++ b/Login.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="images/comment.png"/>
+    <link rel="stylesheet" type="text/javascript" href="js_files/__login.js">
     <title>Login::Chatroom</title>
     <style type="text/css">
       body{
