--- a/Register.html
+++ b/Register.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+    <link rel="stylesheet" type="text/javascript" href="js_files/__reg.js">
     <title>Register::Chatroom</title>
     <style type="text/css">
       body{
@@ -148,89 +149,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d82a99eeb8.js" crossorigin="anonymous"></script>
-    <script>
-      $(document).ready(function(){
-        $(window).scroll(function(){
-          if($(window).scrollTop() > 100){
-              $(".navbar").css({"background-color":"grey"});   
-          }
-          else{
-              $(".navbar").css({"background-color":"transparent"});
-          }
-        })
-      })
-    </script>
-    <script>
-    	function myfunction() {
-		  var x = document.getElementById("password");
-		  var y = document.getElementById("confirm_password");
-		  if (x.type === "password" && y.type=="password") {
-		    x.type = "text";
-		    y.type = "text";
-		    document.getElementById("img").src = "images/unlocked.png";
-		  } else {
-		    x.type = "password";
-		    y.type = "password"
-		    document.getElementById("img").src = "images/locked.png";
-		  }
-		}
-    </script>
-    <script>
-      
-      const form = {
-        first_name: document.getElementById('first_name'),
-        last_name: document.getElementById('last_name'),
-        email: document.getElementById('email'),
-        password: document.getElementById('password'),
-        confirm_password: document.getElementById('confirm_password'),
-        message: document.getElementById('internal-error'),
-        submit: document.getElementById('register')
-      };
-
-      form.submit.addEventListener('click', () => {
-        const request = new XMLHttpRequest();
-
-        var u_namee = form.email.value.split('@');
-        sessionStorage.setItem('uname', u_namee[0] );
-
-        request.onload = () => {
-          let responseObject = null;
-
-          try{
-            responseObject = JSON.parse(request.responseText);
-          }catch(e){
-            console.error('Could not parse JSON!');
-          }
-
-          if(responseObject){
-            handleResponse(responseObject);
-          }
-        }
-        const requestData = `first_name=${form.first_name.value}&last_name=${form.last_name.value}&email=${form.email.value}&password=${form.password.value}&confirm_password=${form.confirm_password.value}`;
-        
-
-        request.open('post', 'chatroom_register.php');
-        request.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-        request.send(requestData);
-      })
-      function handleResponse(responseObject){
-        if(responseObject.ok){
-          location.href = 'chatroom.html';
-        }
-        else{
-          while(form.message.firstChild){
-            form.message.removeChild(form.message.firstChild);
-          }
-
-          responseObject.message.forEach((message) => {
-            const li = document.createElement('li');
-            li.textContent = message;
-            form.message.appendChild(li);
-          })
-          form.message.style.display = "block";
-        }
-      }
-    </script>
   </body>
 </html>
 
