Seperated js files

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/javascript" href="js_files/__home.js">
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
@@ -107,17 +108,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="text.js"></script>
     <script src="https://kit.fontawesome.com/d82a99eeb8.js" crossorigin="anonymous"></script>
-    <script>
-      $(document).ready(function(){
-        $(window).scroll(function(){
-          if($(window).scrollTop() > 100){
-              $(".navbar").css({"background-color":"grey"});   
-          }
-          else{
-              $(".navbar").css({"background-color":"transparent"});
-          }
-        })
-      })
-    </script>
   </body>
 </html>
