changed location of js files

--- a/Register.html
+++ b/Register.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
-    <link rel="stylesheet" type="text/javascript" href="js_files/__reg.js">
+    <link rel="stylesheet" type="text/javascript" href="scripts/__reg.js">
     <title>Register::Chatroom</title>
     <style type="text/css">
       body{
