Seperated css files

--- a/Register.html
+++ b/Register.html
@@ -5,29 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="scripts/main.css">
+    <link rel="stylesheet" type="text/css" href="scripts/body.css">
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
     <link rel="stylesheet" type="text/javascript" href="scripts/__reg.js">
     <title>Register::Chatroom</title>
-    <style type="text/css">
-      body{
-       background-image:url("images/background1.jpg");
-       background-margin:100;
-      }
-      .navbar-brand{
-        font-family: 'Mansalva', cursive;
-        color:white;
-      }
-      .navbar-brand:hover{
-        color:grey;
-        transition-duration: 0.4s;
-        -webkit-transition-duration: 0.4s;
-      }
-      .para{
-        font-family: 'Titillium Web', sans-serif;
-      }
-    </style>
     </head>
   <body>
     <header>
