--- a/home.html
+++ b/home.html
@@ -6,28 +6,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/javascript" href="scripts/__home.js">
     <link rel="stylesheet" type="text/css" href="scripts/main.css">
+    <link rel="stylesheet" type="text/css" href="scripts/body.css">
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
     <title>Home::Chatroom</title>
-    <style type="text/css">
-      body{
-       background-image:url("images/background1.jpg");
-       background-margin:100;
-      }
-      .navbar-brand{
-        font-family: 'Mansalva', cursive;
-        color:white;
-      }
-      .navbar-brand:hover{
-        color:grey;
-        transition-duration: 0.4s;
-        -webkit-transition-duration: 0.4s;
-      }
-      .para{
-        font-family: 'Titillium Web', sans-serif;
-      }
-    </style>
   </head>
   <body>
     <header>
